--- a/frames/frame.html
+++ b/frames/frame.html
@@ -18,7 +18,7 @@
                     <td><a href="../fullTrans/index.html" target="second" >About</a></td>
                 </tr>
                 <tr>
-                    <td><a href="../Documents/my_resume(5).pdf" target="second" >Resume</a></td>
+                    <td><a href="../Documents/shashiResumeUpdatedMarch.pdf" target="second" >Resume</a></td>
                 </tr>
                 <tr>
                     <td><a href="frame2.html" target="second" >first link</a></td>
