--- a/second.html
+++ b/second.html
@@ -10,7 +10,7 @@
     </head>
     <body class="bg-dark">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="./shashi.html">
+                <a class="navbar-brand" href="index.html">
                   <span style='color: orangered'>S</span>
                   <span style='color: skyblue'>h</span>
                   <span style='color: #52BE80'>a</span>
