--- a/frames/gallery.html
+++ b/frames/gallery.html
@@ -12,7 +12,7 @@
 <body>
 <!-- navbar starts here -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="../shashi.html">
+                <a class="navbar-brand" href="../index.html">
                   <span style='color: orangered'>S</span>
                   <span style='color: skyblue'>h</span>
                   <span style='color: #52BE80'>a</span>
